# AgentForge

./: .gitignore  EXAMPLES.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
agentforge/: __init__.py  cli.py  config.py  core.py  gui.py
agentforge/integrations/: __init__.py  base.py  groq_backend.py  huggingface.py  openai_backend.py
agentforge/plugins/: __init__.py  image_gen.py  rss.py  voice.py
agentforge/skills/: __init__.py  analysis.py  generation.py  scraping.py
docs/: conf.py  index.rst
examples/: news_analyzer.py  news_analyzer.yaml  quickstart.ipynb  stock_monitor.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_integrations.py  test_skills.py
